<resources>
    <string name="app_name">Notian</string>
    <string name="new_note">New Task</string>
    <string name="new_note_condensed">New</string>
    <string name="due_warning">Warning</string>
    <string name="save_notes">Save</string>
    <string name="no_notes">There are currently no tasks.\nTry creating some with the button on the top!</string>
    <string name="note_action_edit">Edit</string>
    <string name="note_action_details">Details</string>
    <string name="note_action_delete">Delete</string>
    <string name="note_editor_title">Title</string>
    <string name="note_editor_date">Date</string>
    <string name="note_editor_time">Time</string>
    <string name="note_editor_description">Description</string>
    <string name="note_editor_save_button">Save button</string>
    <string name="note_deleted">Task deleted</string>
    <string name="undo">Undo</string>
    <string name="saved_notes">Saved tasks</string>
    <string name="preferences">Preferences</string>
    <string name="unknown_username">Unknown Username</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">Login</string>
    <string name="login_action">Login</string>
    <string name="login_register_redirect">New Account</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_title">New Account</string>
    <string name="register_action">Register</string>
    <string name="login_successful">Login successful!</string>
    <string name="register_successful">Welcome to Notian!</string>
    <string name="drawer_todolists">Lists</string>
    <string name="synchronize">Synchronize</string>
    <string name="new_task_list">New List</string>
    <string name="create">Create</string>
    <string name="list_name">List Name</string>
    <string name="cancel">Cancel</string>
    <string name="recycler_view_item_transition_name">recycler_view_item_transition_name_%1$s</string>
    <string name="logout">Logout</string>
    <string name="note_editor_location">Location</string>
    <string name="settings_upload_notification">Upload Notifications</string>
    <string name="settings_notification_category">Notifications</string>
    <string name="settings_startup_notification">Startup Notification</string>
    <string name="notification_startup_channel_id">startup</string>
    <string name="notification_startup_channel_name">Startup Notifications</string>
    <string name="notification_startup_title">Tasks due today</string>
    <string name="notification_startup_description">The following tasks are due today…</string>
    <string name="notification_startup_group_id">startup_notification_group</string>
</resources>