<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.profiluefter.profinote.models.NoteEditorActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NoteEditorActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteEditorTitleContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteEditorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_editor_title"
                android:inputType="text"
                android:text="@={viewModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/noteEditorDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:onClick="openDatePicker"
            android:text="@{viewModel.date}"
            app:layout_constraintEnd_toStartOf="@+id/noteEditorTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteEditorTitleContainer" />

        <Button
            android:id="@+id/noteEditorTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="openTimePicker"
            android:text="@{viewModel.time}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/noteEditorDate"
            app:layout_constraintTop_toBottomOf="@+id/noteEditorTitleContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteEditorDescriptionContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteEditorTime"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteEditorDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_editor_description"
                android:inputType="textMultiLine"
                android:text="@={viewModel.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/noteEditorSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:clickable="true"
            android:contentDescription="@string/note_editor_save_button"
            android:focusable="true"
            android:onClick="saveNote"
            android:src="@drawable/baseline_save_24"
            app:tint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
