<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="me.profiluefter.profinote.data.entities.NoteKt" />

        <variable
            name="fragment"
            type="me.profiluefter.profinote.activities.NoteEditorFragment" />

        <variable
            name="layoutViewModel"
            type="me.profiluefter.profinote.models.NoteEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NoteEditorFragment">

        <CheckBox
            android:id="@+id/noteEditorDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="@={layoutViewModel.done}"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/noteEditorTitleContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/noteEditorTitleContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteEditorTitleContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/noteEditorDone"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteEditorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_editor_title"
                android:inputType="text"
                android:text="@={layoutViewModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/noteEditorDate"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{(v) -> fragment.openDatePicker(v)}"
            android:text="@{layoutViewModel.date}"
            app:layout_constraintEnd_toStartOf="@+id/noteEditorTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteEditorTitleContainer" />

        <Button
            android:id="@+id/noteEditorTime"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(v) -> fragment.openTimePicker(v)}"
            android:text="@{layoutViewModel.time}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/noteEditorDate"
            app:layout_constraintTop_toBottomOf="@+id/noteEditorTitleContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteEditorDescriptionContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteEditorTime"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteEditorDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_editor_description"
                android:inputType="textMultiLine"
                android:text="@={layoutViewModel.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/noteEditorSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:clickable="true"
            android:visibility="invisible"
            fabHidden="@{layoutViewModel.title.empty || layoutViewModel.description.empty}"
            android:contentDescription="@string/note_editor_save_button"
            android:focusable="true"
            android:onClick="@{() -> fragment.saveNote()}"
            android:src="@drawable/baseline_save_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorOnPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
